--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 		{% assign size = posts | size %}
 		<section class="category">
 				<h3>
-					<a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ name | replace: "-", " " }}</a>
+					<a href="{{ site.baseurl }}/category/{{ name | slugify }}">{{ name | replace: "-", " " }}&nbsp;({{size}})</a>
 				</h3>
-
 			<ul>
 				{% assign tutorials = posts | sort: "title" %}
 				{% for tutorial in tutorials limit: 4 %}
 					<li><a href="{{ site.baseurl }}{{ tutorial.url }}">{{ tutorial.title }}</a></li>
 				{% endfor %}
-				{% if size > 4 %}
+				<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}"><i class="fa fa-angle-double-right" aria-hidden="true"></i>&nbsp;see all {{size}} article</a></li>
+				<!-- {% if size > 4 %}
 					<li><a href="{{ site.baseurl }}/category/{{ name | slugify }}/">{{ size | minus: 4 }} more...</a></li>
 					{% else %}
 					<li><a></a></li>
-				{% endif %}
+				{% endif %} -->
 			</ul>
 		</section>
 	{% endfor %}
